[package]
name = "rocket_lang"
version = "0.0.1"
edition = "2021"
authors = ["tvallotton@uc.cl"]
license = "Apache-2.0"
repository = "https://github.com/tvallotton/rocket_lang"
description = "rocket_lang provides a configurable enum type for multi-language rocket applications."
keywords = ["rocket", "web", "language", "multi-language"]

[dependencies]
fehler = "1.0.0"
once_cell = "1.9.0"
regex = "1.5.4"
rocket = "0.5.0-rc.1"
thiserror = "1.0.30"

[dev-dependencies]
tokio = {version = "1.16.1", features = ["rt-multi-thread", "macros"]}

