[package]
name = "rocket_lang"
version = "0.2.0"
edition = "2021"
authors = ["tvallotton@uc.cl"]
license = "Apache-2.0"
repository = "https://github.com/tvallotton/rocket_lang"
description = "rocket_lang provides a configurable enum type for multi-language rocket applications."
keywords = ["rocket", "web", "language", "multi-language"]

[dependencies]
once_cell = "1.9.0"
regex = "1.5.4"
rocket = "0.5.0-rc.2"
thiserror = "1.0.30"

[dev-dependencies]
tap = "1.0.1"
tokio = {version = "1.16.1", features = ["rt-multi-thread", "macros"]}

